footer done for portfolio

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </div>
         </div>
     </div>
-    <div class="education">
+    <div id="education">
         <h1 class="education-heading">Education</h1>
         <div class="first-education">
             <h5 class="year">On Process</h5>
@@ -228,6 +228,56 @@
             </div>
     </div>
     </div>
+    <div id="back" class="footer">
+        <div>
+            <ul class="footerul">
+                <li>
+                    <h1 class="logo">PortFolio<span class="dot">.</span></h1>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <ul class="footerul1">
+                <li>
+                    <h4 class="linkheading">Site Links</h4>
+                </li>
+                <li><a href="">Home</a></li>
+                <li><a href="#about-me"> About</a></li>
+                <li><a href="#my-assignments"> My assignments</a></li>
+                <li><a href="#education"> Education</a></li>
+            </ul>
+        </div>
+        <div>
+            <ul class="footerul2">
+                <li>
+                    <h4 class="contactheading">Contact</h4>
+                </li>
+                <li>+923122323769</li>
+                <li>aqibk3037@gmail.com</li>
+                <li>myassignments00.netlify.app</li>
+                <li class="address">Ab cinia line, Gulshan-e-Zahoor karachi</li>
+            </ul>
+        </div>
+        <div>
+            <ul class="footerul3">
+                <li>
+                    <h4 class="followheading">Social Networls</h4>
+                </li>
+                <div class="social-networks">
+                <li><a href="https://www.facebook.com/aqib984" target="_blank"><i class="fa-brands fa-facebook"
+                    style="color: #f9f9f9;"></i></a></li>
+        <li><a href="https://www.instagram.com/aqi984/" target="_blank"><i class="fa-brands fa-instagram"
+                    style="color: #f9f9f9;"></i></a></li>
+        <li><a href="https://www.linkedin.com/in/aqib984/" target="_blank"><i class="fa-brands fa-linkedin"
+                    style="color: #f9f9f9;"></i></a></li>
+        <li><a href="https://twitter.com/Aqi984" target="_blank"><i class="fa-brands fa-twitter"
+                    style="color: #f9f9f9;"></i></a></li>
+        <li><a href="https://github.com/maqib984" target="_blank"><i class="fa-brands fa-github"
+                    style="color: #f9f9f9;"></i></a></li>
+                </div>
+            </ul>
+        </div>
+    </div>    
 </body>
 
 </html>
