thanks for scrolling

--- a/index.html
+++ b/index.html
@@ -277,7 +277,10 @@
                 </div>
             </ul>
         </div>
-    </div>    
+    </div> 
+    <div class="thanks">
+        <h1>"Thanks for Scrolling"</h1>
+    </div>   
 </body>
 
 </html>
