--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="on">
+    <!-- <img src="img/pngwing.com.png" alt="" onmouseout="src='img/pngwing.com (1).png'"> -->
+    <img class="img" src="img/pngwing.com (1)1.png" alt="" onMouseover="src='img/pngwing.com.png'" onmouseout="src='img/pngwing.com (1).png'">
+</div>
+
+
+
     <script src="app.js"></script>
 </body>
 </html>
