--- a/index.html
+++ b/index.html
@@ -91,6 +91,41 @@
     <div id="my-assignments">
         <h3 class="my-assignments-heading">My Assignments</h3>
         <div class="Assignment">
+            <button class="Assignment-2">
+                <a href="FIGHTING GAME/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                </a>
+                <a href="FIGHTING GAME/index.html">
+                    <span class="yellow-assignment">JavaScript Assignment 8<br />Fighting Game<br>20-Sep-2023</span>
+                </a>
+            </button>
+            <button class="Assignment-1">
+                <a href="Calculator/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                </a>
+                <a href="Calculator/index.html">
+                    <span class="yellow-assignment">JavaScript Assignment 7<br /> Calculator<br>15-Sep-2023</span>
+                </a>
+            </button>
+            <button class="Assignment-2">
+                <a href="JavaScript/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                </a>
+                <a href="JavaScript/index.html">
+                    <span class="yellow-assignment">JavaScript Assignment 6<br /> Chapter 35 to 38 <br>11-Sep-2023</span>
+                </a>
+            </button>
+            <button class="Assignment-1">
+                <a href="JavaScript/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                </a>
+                <a href="JavaScript/index.html">
+                    <span class="yellow-assignment">JavaScript Assignment 5<br /> Chapter 26 to 34 <br>06-Sep-2023</span>
+                </a>
+            </button>
+            <button class="Assignment-2">
+                <a href="JavaScript/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                </a>
+                <a href="JavaScript/index.html">
+                    <span class="yellow-assignment">JavaScript Assignment 4<br /> Chapter 17 to 25 <br>28-Aug-2023</span>
+                </a>
+            </button>
             <button class="Assignment-1">
                 <a href="index.html"><h1 class="logo-1">PortFolio<span class="dot">.</span></h1>
                 </a>
