--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
         <h3 class="my-assignments-heading">My Assignments</h3>
         <div class="Assignment">
             <button class="Assignment-2">
-                <a href="FIGHTING GAME/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                <a href="FIGHTING GAME/index.html"><img class="Assignment-pic3" src="FIGHTING GAME/images/leo-winloop.gif" alt="">
                 </a>
                 <a href="FIGHTING GAME/index.html">
                     <span class="yellow-assignment">JavaScript Assignment 8<br />Fighting Game<br>20-Sep-2023</span>
                 </a>
             </button>
             <button class="Assignment-1">
-                <a href="Calculator/index.html"><img class="Assignment-pic1" src="images/javablackandmatch.png" alt="">
+                <a href="Calculator/index.html"><img class="Assignment-pic1" src="Calculator/images/calculator1.png" alt="">
                 </a>
                 <a href="Calculator/index.html">
                     <span class="yellow-assignment">JavaScript Assignment 7<br /> Calculator<br>15-Sep-2023</span>
